--- a/TextSnippets/src/index.html
+++ b/TextSnippets/src/index.html
@@ -23,5 +23,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <app-redirect></app-redirect> <!--Selector for additional bootstrapped component-->
 </body>
 </html>
